Changes padding to stop label covering things

--- a/src/components/student/profileqs/profileqs.scss
+++ b/src/components/student/profileqs/profileqs.scss
@@ -90,7 +90,7 @@
     background: $lightcolor;
     font-size: 1.4rem;
     left: 1rem;
-    padding: 0.4rem;
+    padding: 0.4rem 0.4rem 0;
     position: relative;
     top: 0.8rem;
     z-index: 1;
